--- a/src/app/admin/components/material-list/material-list.component.html
+++ b/src/app/admin/components/material-list/material-list.component.html
@@ -1,83 +1,68 @@
 <div class="container">
-  <div class="header">
-    <h1 class="h1-title">Gestion des équipements</h1>
-    <p-button
-      severity="success"
-      icon="pi pi-plus"
-      label="Créer un équipement"
-      class="custom-button"
-      (click)="showCreateMaterialDialog()"
-    ></p-button>
+
+  <div class="flex align-item-center border-round p-4 relative" style="background-color: rgb(239, 244, 255);">
+    <div>
+      <h1 class="text-2xl font-semibold">Gestion des équipements</h1>
+      <p class="text-900 -mt-2">Créer, modifier ou supprimer des équipements.</p>
+    </div>
+    <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px;">
+      <img src="/assets/images/3dicons/cube.png" alt="cube" width="180px">
+    </div>
   </div>
 
-  <!-- Barre de recherche PrimeNG -->
-  <div class="search-bar">
-    <span class="p-input-icon-left">
-      <i class="pi pi-search"></i>
-      <input
-        type="text"
-        pInputText
-        [(ngModel)]="searchQuery"
-        (input)="onSearch()"
-        placeholder="Rechercher un matériel..."
-      />
-    </span>
-  </div>
+  <div class="shadow-1 border-round mt-7 p-4 pt-2">
+    <h1 class="text-lg font-medium">Équipements</h1>
 
-  <!-- Tableau PrimeNG avec pagination et responsive layout -->
-  <p-table
-    [value]="filteredMaterials"
-    [paginator]="true"
-    [rows]="9"
-    [responsiveLayout]="scroll"
-  >
-    <ng-template pTemplate="header">
-      <tr>
-        <th>ID</th>
-        <th>Nom de l'équipement</th>
-        <th>Actions</th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-material>
-      <tr>
-        <td>{{ material.id }}</td>
-        <td *ngIf="!material.isEditing" (click)="startEditing(material)">
-          {{ material.equipment }}
-        </td>
-        <td *ngIf="material.isEditing">
-          <input
-            type="text"
-            [(ngModel)]="material.updatedEquipment"
-            (blur)="stopEditing(material)"
-          />
-        </td>
-        <td>
-          <!-- Boutons avec icônes et tooltips -->
-          <p-button
-            icon="pi pi-pencil"
-            class="p-button-rounded p-button-success p-mr-2"
-            tooltip="Modifier"
-            (click)="startEditing(material)"
-          ></p-button>
-          <p-button
-            icon="pi pi-trash"
-            class="p-button-rounded p-button-danger"
-            (onClick)="confirmDelete(material)"
-          ></p-button>
-        </td>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="emptymessage">
-      <tr>
-        <td colspan="3">Aucun matériel trouvé.</td>
-      </tr>
-    </ng-template>
-  </p-table>
+    <div class="flex justify-content-between mt-5 mb-4">
+      <input class="w-4" type="text" pInputText [(ngModel)]="searchQuery" (input)="onSearch()"
+        placeholder="Rechercher un matériel" />
+
+      <p-button icon="pi pi-plus" label="Créer un équipement" class="custom-button"
+        (click)="showCreateMaterialDialog()"></p-button>
+    </div>
+
+    <!-- Tableau PrimeNG avec pagination et responsive layout -->
+    <p-table [value]="filteredMaterials" [paginator]="true" [rows]="9" [responsiveLayout]="scroll">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>ID</th>
+          <th>Nom de l'équipement</th>
+          <th></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-material>
+        <tr>
+          <td>#{{ material.id }}</td>
+          <td *ngIf="!material.isEditing" (click)="startEditing(material)">
+            {{ material.equipment }}
+          </td>
+          <td *ngIf="material.isEditing">
+            <input pInputText type="text" [(ngModel)]="material.updatedEquipment" (blur)="stopEditing(material)" />
+          </td>
+          <td class="flex justify-content-evenly">
+            <!-- Boutons avec icônes et tooltips -->
+            <div>
+
+            </div>
+            <div class="flex align-items-center justify-content-center">
+              <button pButton pRipple pTooltip="Modifier" tooltipPosition="top" type="button" icon="pi pi-pencil"
+                class="p-button-rounded p-button-text" (click)="startEditing(material)"></button>
+              <button pButton pRipple pTooltip="Supprimer" tooltipPosition="top" icon="pi pi-trash"
+                class="p-button-rounded p-button-text p-button-danger" (click)="confirmDelete(material)"></button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="3">Aucun équipement.</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
 
-<p-confirmDialog></p-confirmDialog>
+<p-confirmDialog header="Supprimer" icon="pi pi-exclamation-triangle"></p-confirmDialog>
 <p-toast></p-toast>
-<app-create-material
-  [display]="displayCreateMaterialDialog"
-  (equipmentCreated)="handleEquipmentCreated()"
-></app-create-material>
+<app-create-material [display]="displayCreateMaterialDialog"
+  (equipmentCreated)="handleEquipmentCreated()"></app-create-material>
