--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -26,7 +26,7 @@
                 <a pRipple
                   class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                   routerLinkActive="active-navlink">
-                  <i class="pi pi-home mr-2" routerLinkActive="active-navlink"></i>
+                  <i class="pi pi-th-large mr-2" routerLinkActive="active-navlink"></i>
                   <span class="font-medium text-sm" routerLinkActive="active-navlink">Tableau de bord</span>
                 </a>
               </li>
@@ -139,7 +139,7 @@
                   <a pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                     routerLinkActive="active-navlink">
-                    <i class="pi pi-folder mr-2" routerLinkActive="active-navlink"></i>
+                    <i class="pi pi-box mr-2" routerLinkActive="active-navlink"></i>
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Équipements</span>
                   </a>
                 </li>
