--- a/src/app/admin/components/training-list/training-list.component.html
+++ b/src/app/admin/components/training-list/training-list.component.html
@@ -1,66 +1,139 @@
 <div class="container">
-  
-    <!-- Header Section -->
-    <div class="flex align-item-center border-round p-4 relative" style="background-color: rgb(239, 244, 255);">
-      <div>
-        <h1 class="text-2xl font-semibold">Gestion des Formations</h1>
-        <p class="text-900 -mt-2">Créer, modifier ou supprimer des formations.</p>
-      </div>
-      <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px;">
-        <img src="/assets/images/3dicons/cube.png" alt="cube" width="180px">
-      </div>
+  <!-- Header Section -->
+  <div
+    class="flex align-item-center border-round p-4 relative"
+    style="background-color: rgb(239, 244, 255)"
+  >
+    <div>
+      <h1 class="text-2xl font-semibold">Gestion des parcourss</h1>
+      <p class="text-900 -mt-2">Créer, modifier ou supprimer des parcourss.</p>
     </div>
-  
-    <!-- Search and Add Section -->
-    <div class="shadow-1 border-round mt-7 p-4 pt-2">
-      <h1 class="text-lg font-medium">Formations</h1>
-  
-      <div class="flex justify-content-between mt-5 mb-4">
-        <input class="w-4" type="text" pInputText [(ngModel)]="searchQuery" (input)="onSearch()"
-          placeholder="Rechercher une formation" />
-  
-        <p-button icon="pi pi-plus" label="Créer une formation" class="custom-button"
-          (click)="showCreateTrainingDialog()"></p-button>
-      </div>
-  
-      <!-- Training Table with PrimeNG -->
-      <p-table [value]="filteredTrainings" [paginator]="true" [rows]="9" [responsiveLayout]="scroll">
-        <ng-template pTemplate="header">
-          <tr>
-            <th>ID</th>
-            <th>Nom de la formation</th>
-            <th></th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-training>
-          <tr>
-            <td>#{{ training.id }}</td>
-            <td *ngIf="!training.isEditing" (click)="startEditing(training)">
-              {{ training.name }}
-            </td>
-            <td *ngIf="training.isEditing">
-              <input pInputText type="text" [(ngModel)]="training.updatedName" (blur)="stopEditing(training)" />
-            </td>
-            <td class="flex justify-content-evenly">
-              <div class="flex align-items-center justify-content-center">
-                <button pButton pRipple pTooltip="Modifier" tooltipPosition="top" type="button" icon="pi pi-pencil"
-                  class="p-button-rounded p-button-text" (click)="startEditing(training)"></button>
-                <button pButton pRipple pTooltip="Supprimer" tooltipPosition="top" icon="pi pi-trash"
-                  class="p-button-rounded p-button-text p-button-danger" (click)="confirmDelete(training)"></button>
-              </div>
-            </td>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="emptymessage">
-          <tr>
-            <td colspan="3">Aucune formation.</td>
-          </tr>
-        </ng-template>
-      </p-table>
+    <div
+      class="absolute hidden sm:hidden md:block"
+      style="top: -14px; right: 50px"
+    >
+      <img src="/assets/images/3dicons/cube.png" alt="cube" width="180px" />
     </div>
   </div>
-  
-  <!-- Confirmation Dialog and Toast Messages -->
-  <p-confirmDialog header="Supprimer" icon="pi pi-exclamation-triangle"></p-confirmDialog>
-  <p-toast></p-toast>
 
+  <!-- Search and Add Section -->
+  <div class="shadow-1 border-round mt-7 p-4 pt-2">
+    <h1 class="text-lg font-medium">parcourss</h1>
+
+    <div class="flex justify-content-between mt-5 mb-4">
+      <input
+        class="w-4"
+        type="text"
+        pInputText
+        [(ngModel)]="searchQuery"
+        (input)="onSearch()"
+        placeholder="Rechercher une parcours"
+      />
+      <p-button
+        icon="pi pi-plus"
+        label="Créer une parcours"
+        class="custom-button"
+        (click)="showCreateTrainingDialog()"
+      ></p-button>
+    </div>
+
+    <!-- Training Table with PrimeNG -->
+    <p-table
+      [value]="filteredTrainings"
+      [paginator]="true"
+      [rows]="9"
+      [responsiveLayout]="scroll"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th>ID</th>
+          <th>Nom du parcours</th>
+          <th>
+            Formation
+            <select
+              (change)="onDegreeFilter($event)"
+              placeholder="Filter by Formation"
+            >
+              <option value="">All</option>
+              <option *ngFor="let degree of degrees" [value]="degree.id">
+                {{ degree.name }}
+              </option>
+            </select>
+          </th>
+          <th>Actions</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-training>
+        <tr>
+          <td>#{{ training.id }}</td>
+          <td *ngIf="!training.isEditing">{{ training.name }}</td>
+          <td *ngIf="training.isEditing">
+            <input pInputText type="text" [(ngModel)]="training.updatedName" />
+          </td>
+          <td *ngIf="!training.isEditing">{{ training.degree_name }}</td>
+          <td *ngIf="training.isEditing">
+            <select [(ngModel)]="training.updatedDegreeId">
+              <option
+                *ngFor="let degree of degrees"
+                [value]="degree.id"
+                [selected]="degree.id === training.id_Degree"
+              >
+                {{ degree.name }}
+              </option>
+            </select>
+          </td>
+          <td class="flex justify-content-evenly">
+            <div
+              *ngIf="!training.isEditing"
+              class="flex align-items-center justify-content-center"
+            >
+              <button
+                pButton
+                pRipple
+                pTooltip="Modifier"
+                tooltipPosition="top"
+                type="button"
+                icon="pi pi-pencil"
+                class="p-button-rounded p-button-text"
+                (click)="startEditing(training)"
+              ></button>
+              <button
+                pButton
+                pRipple
+                pTooltip="Supprimer"
+                tooltipPosition="top"
+                icon="pi pi-trash"
+                class="p-button-rounded p-button-text p-button-danger"
+                (click)="confirmDelete(training)"
+              ></button>
+            </div>
+            <div
+              *ngIf="training.isEditing"
+              class="flex align-items-center justify-content-center"
+            >
+              <button
+                pButton
+                type="button"
+                label="Save"
+                (click)="stopEditing(training)"
+                class="p-button-success"
+              ></button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="5">Aucun parcours.</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</div>
+
+<!-- Confirmation Dialog and Toast Messages -->
+<p-confirmDialog
+  header="Supprimer"
+  icon="pi pi-exclamation-triangle"
+></p-confirmDialog>
+<p-toast></p-toast>
