--- a/src/app/resp/components/degree/degree.component.html
+++ b/src/app/resp/components/degree/degree.component.html
@@ -1,16 +1,10 @@
 <div *ngIf="degreeInfo" class="p-2 pl-5 pr-5 content">
-  <div
-    class="flex align-items-center border-round p-4 relative mb-6"
-    style="background-color: rgb(255, 247, 234)"
-  >
+  <div class="flex align-items-center border-round p-4 relative mb-6" style="background-color: rgb(255, 247, 234)">
     <div>
       <p class="text-900 font-medium">Cohorte ></p>
       <h1 class="text-2xl font-semibold">BUT {{ degreeInfo.name }}</h1>
     </div>
-    <div
-      class="absolute hidden sm:hidden md:block"
-      style="top: -14px; right: 50px"
-    >
+    <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px">
       <img src="/assets/images/3dicons/location.png" alt="cube" width="180px" />
     </div>
   </div>
@@ -27,15 +21,10 @@
           </div>
         </div>
       </ng-template>
-      <p-table
-        [value]="promotions"
-        [tableStyle]="{ 'min-width': '60rem' }"
-        [paginator]="true"
-        [rows]="5"
+      <p-table [value]="promotions" [tableStyle]="{ 'min-width': '60rem' }" [paginator]="true" [rows]="5"
         [showCurrentPageReport]="true"
         currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} promotions"
-        [rowsPerPageOptions]="[5, 10, 20, 50]"
-      >
+        [rowsPerPageOptions]="[5, 10, 20, 50]">
         <ng-template pTemplate="header">
           <tr>
             <th pSortableColumn="name">
@@ -55,13 +44,8 @@
             </td>
             <td>{{ getStudentCountByPromotion(promotion.id) }}</td>
             <td>
-              <p-button
-                (click)="menuStudents.toggle($event)"
-                icon="pi pi-ellipsis-v"
-                [rounded]="true"
-                [text]="true"
-                severity="secondary "
-              ></p-button>
+              <p-button (click)="menuStudents.toggle($event)" icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
+                severity="secondary "></p-button>
             </td>
           </tr>
         </ng-template>
@@ -78,15 +62,10 @@
           </div>
         </div>
       </ng-template>
-      <p-table
-        [value]="students"
-        [tableStyle]="{ 'min-width': '60rem' }"
-        [paginator]="true"
-        [rows]="5"
+      <p-table [value]="students" [tableStyle]="{ 'min-width': '60rem' }" [paginator]="true" [rows]="5"
         [showCurrentPageReport]="true"
         currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} étudiants"
-        [rowsPerPageOptions]="[5, 10, 20, 50]"
-      >
+        [rowsPerPageOptions]="[5, 10, 20, 50]">
         <ng-template pTemplate="header">
           <tr>
             <th pSortableColumn="firstname">
@@ -99,7 +78,7 @@
               Promotion <p-sortIcon field="promotion"></p-sortIcon>
             </th>
             <th pSortableColumn="td">
-              Alternant <p-sortIcon field="td"></p-sortIcon>
+              Apprenti <p-sortIcon field="td"></p-sortIcon>
             </th>
             <th pSortableColumn="td">
               TD <p-sortIcon field="td"></p-sortIcon>
@@ -119,24 +98,16 @@
               {{ student.promotion.year }}
             </td>
             <td>
-              <i
-                class="pi"
-                [ngClass]="{
+              <i class="pi" [ngClass]="{
                   'pi-check-circle text-green-300': student.isApprentice,
                   'pi-times-circle text-red-300': !student.isApprentice
-                }"
-              ></i>
+                }"></i>
             </td>
             <td>{{ student.td[0].name }}</td>
             <td>{{ student.tp[0].name }}</td>
             <td>
-              <p-button
-                (click)="menuStudents.toggle($event)"
-                icon="pi pi-ellipsis-v"
-                [rounded]="true"
-                [text]="true"
-                severity="secondary"
-              ></p-button>
+              <p-button (click)="menuStudents.toggle($event)" icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
+                severity="secondary"></p-button>
             </td>
           </tr>
         </ng-template>
@@ -146,9 +117,4 @@
 </div>
 
 <p-toast></p-toast>
-<p-menu
-  #menuStudents
-  [model]="menuItemsStudents"
-  [popup]="true"
-  appendTo="body"
-></p-menu>
+<p-menu #menuStudents [model]="menuItemsStudents" [popup]="true" appendTo="body"></p-menu>
