--- a/src/app/resp/components/promotion/promotion.component.html
+++ b/src/app/resp/components/promotion/promotion.component.html
@@ -1,8 +1,5 @@
 <div *ngIf="promotionInfo" class="p-2 pl-5 pr-5 content">
-  <div
-    class="flex align-items-center border-round p-4 relative mb-6"
-    style="background-color: rgb(255, 247, 234)"
-  >
+  <div class="flex align-items-center border-round p-4 relative mb-6" style="background-color: rgb(255, 247, 234)">
     <div>
       <p class="text-900 font-medium">
         Cohorte > {{ promotionInfo.degree.name }} >
@@ -12,10 +9,7 @@
         {{ promotionInfo.year }}
       </h1>
     </div>
-    <div
-      class="absolute hidden sm:hidden md:block"
-      style="top: -14px; right: 50px"
-    >
+    <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px">
       <img src="/assets/images/3dicons/target.png" alt="cube" width="180px" />
     </div>
   </div>
@@ -33,15 +27,10 @@
         </div>
       </ng-template>
 
-      <p-table
-        [value]="promotionInfo.trainings"
-        [tableStyle]="{ 'min-width': '60rem' }"
-        [paginator]="true"
-        [rows]="5"
+      <p-table [value]="promotionInfo.trainings" [tableStyle]="{ 'min-width': '60rem' }" [paginator]="true" [rows]="5"
         [showCurrentPageReport]="true"
-        currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} promotions"
-        [rowsPerPageOptions]="[5, 10, 20, 50]"
-      >
+        currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} parcours"
+        [rowsPerPageOptions]="[5, 10, 20, 50]">
         <ng-template pTemplate="header">
           <tr>
             <th pSortableColumn="name">
@@ -64,12 +53,7 @@
             <td>{{ training.student_count }}</td>
             <td>{{ training.td_count }}</td>
             <td>
-              <p-button
-                icon="pi pi-ellipsis-v"
-                [rounded]="true"
-                [text]="true"
-                severity="secondary "
-              ></p-button>
+              <p-button icon="pi pi-ellipsis-v" [rounded]="true" [text]="true" severity="secondary "></p-button>
             </td>
           </tr>
         </ng-template>
@@ -87,15 +71,10 @@
         </div>
       </ng-template>
 
-      <p-table
-        [value]="promotionInfo.students"
-        [tableStyle]="{ 'min-width': '60rem' }"
-        [paginator]="true"
-        [rows]="5"
+      <p-table [value]="promotionInfo.students" [tableStyle]="{ 'min-width': '60rem' }" [paginator]="true" [rows]="5"
         [showCurrentPageReport]="true"
         currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} étudiants"
-        [rowsPerPageOptions]="[5, 10, 20, 50]"
-      >
+        [rowsPerPageOptions]="[5, 10, 20, 50]">
         <ng-template pTemplate="header">
           <tr>
             <th pSortableColumn="firstname">
@@ -104,14 +83,11 @@
             <th pSortableColumn="lastname">
               Prénom <p-sortIcon field="lastname"></p-sortIcon>
             </th>
-            <th pSortableColumn="td">
-              Alternant <p-sortIcon field="td"></p-sortIcon>
+            <th pSortableColumn="training">
+              Parcours <p-sortIcon field="training"></p-sortIcon>
             </th>
             <th pSortableColumn="td">
-              TD <p-sortIcon field="td"></p-sortIcon>
-            </th>
-            <th pSortableColumn="tp">
-              TP <p-sortIcon field="tp"></p-sortIcon>
+              Apprenti <p-sortIcon field="td"></p-sortIcon>
             </th>
             <th></th>
           </tr>
@@ -120,24 +96,15 @@
           <tr>
             <td>{{ student.first_name }}</td>
             <td>{{ student.last_name }}</td>
+            <td>{{ student.training.name }}</td>
             <td>
-              <i
-                class="pi"
-                [ngClass]="{
+              <i class="pi" [ngClass]="{
                   'pi-check-circle text-green-300': student.isApprentice,
                   'pi-times-circle text-red-300': !student.isApprentice
-                }"
-              ></i>
+                }"></i>
             </td>
-            <td>{{ student.td[0].name }}</td>
-            <td>{{ student.tp[0].name }}</td>
             <td>
-              <p-button
-                icon="pi pi-ellipsis-v"
-                [rounded]="true"
-                [text]="true"
-                severity="secondary"
-              ></p-button>
+              <p-button icon="pi pi-ellipsis-v" [rounded]="true" [text]="true" severity="secondary"></p-button>
             </td>
           </tr>
         </ng-template>
