--- a/src/app/resp/components/td/td.component.html
+++ b/src/app/resp/components/td/td.component.html
@@ -1,16 +1,16 @@
-<div *ngIf="trainingInfo" class="p-2 pl-5 pr-5 content">
+<div *ngIf="TDInfo" class="p-2 pl-5 pr-5 content">
     <div class="flex align-items-center border-round p-4 relative mb-6" style="background-color: rgb(255, 247, 234)">
         <div>
             <p class="text-900 font-medium">
-                Cohorte > {{ trainingInfo.degree.name }} > BUT {{ trainingInfo.promotion.level }} {{
-                trainingInfo.degree.name }} {{ trainingInfo.promotion.year }} >
+                Cohorte > {{ TDInfo.degree.name }} > BUT {{ TDInfo.promotion.level }} {{
+                TDInfo.degree.name }} {{ TDInfo.promotion.year }} > {{ TDInfo.training.name}} >
             </p>
             <h1 class="text-2xl font-semibold">
-                {{ trainingInfo.name }}
+                {{ TDInfo.name }}
             </h1>
         </div>
         <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px">
-            <img src="/assets/images/3dicons/rocket.png" alt="cube" width="180px" />
+            <img src="/assets/images/3dicons/at.png" alt="cube" width="180px" />
         </div>
     </div>
 
@@ -19,17 +19,17 @@
             <ng-template pTemplate="header">
                 <div class="flex gap-2 align-items-center">
                     <div>
-                        <span>TDs</span>
+                        <span>TPs</span>
                     </div>
                     <div>
-                        <span class="badge"> {{ trainingInfo.tds.length }} </span>
+                        <span class="badge">{{ TDInfo.tps.length }}</span>
                     </div>
                 </div>
             </ng-template>
 
-            <p-table [value]="trainingInfo.tds" [tableStyle]="{ 'min-width': '60rem' }" [paginator]="true" [rows]="5"
+            <p-table [value]="TDInfo.tps" [tableStyle]="{ 'min-width': '60rem' }" [paginator]="true" [rows]="5"
                 [showCurrentPageReport]="true"
-                currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} TDs"
+                currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} parcours"
                 [rowsPerPageOptions]="[5, 10, 20, 50]">
                 <ng-template pTemplate="header">
                     <tr>
@@ -39,20 +39,18 @@
                         <th pSortableColumn="student_count">
                             Étudiants inscrits <p-sortIcon field="student_count"></p-sortIcon>
                         </th>
-                        <th pSortableColumn="tp_count">
-                            Nombre de TP <p-sortIcon field="tp_count"></p-sortIcon>
-                        </th>
                         <th></th>
                     </tr>
                 </ng-template>
-                <ng-template pTemplate="body" let-td>
+                <ng-template pTemplate="body" let-training>
                     <tr>
-                        <td>{{ td.name }}</td>
-                        <td>{{ td.student_count }}</td>
-                        <td>{{ td.tp_count }}</td>
+                        <td>
+                            {{ training.name }}
+                        </td>
+                        <td>{{ training.student_count }}</td>
                         <td>
                             <p-button icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
-                                severity="secondary"></p-button>
+                                severity="secondary "></p-button>
                         </td>
                     </tr>
                 </ng-template>
@@ -65,13 +63,13 @@
                         <span>Étudiants</span>
                     </div>
                     <div>
-                        <span class="badge">{{ trainingInfo.students.length }}</span>
+                        <span class="badge">{{ TDInfo.students.length }}</span>
                     </div>
                 </div>
             </ng-template>
 
-            <p-table [value]="trainingInfo.students" [tableStyle]="{ 'min-width': '60rem' }" [paginator]="true"
-                [rows]="5" [showCurrentPageReport]="true"
+            <p-table [value]="TDInfo.students" [tableStyle]="{ 'min-width': '60rem' }" [paginator]="true" [rows]="5"
+                [showCurrentPageReport]="true"
                 currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} étudiants"
                 [rowsPerPageOptions]="[5, 10, 20, 50]">
                 <ng-template pTemplate="header">
@@ -82,8 +80,8 @@
                         <th pSortableColumn="lastname">
                             Prénom <p-sortIcon field="lastname"></p-sortIcon>
                         </th>
-                        <th pSortableColumn="td">
-                            TD <p-sortIcon field="td"></p-sortIcon>
+                        <th pSortableColumn="tp">
+                            TP <p-sortIcon field="tp"></p-sortIcon>
                         </th>
                         <th pSortableColumn="apprentice">
                             Apprenti <p-sortIcon field="apprentice"></p-sortIcon>
@@ -95,7 +93,7 @@
                     <tr>
                         <td>{{ student.first_name }}</td>
                         <td>{{ student.last_name }}</td>
-                        <td>{{ student.td[0].name }}</td>
+                        <td>{{ student.tp[0].name }}</td>
                         <td>
                             <i class="pi" [ngClass]="{
                   'pi-check-circle text-green-300': student.isApprentice,
