--- a/src/app/resp/components/tp/tp.component.html
+++ b/src/app/resp/components/tp/tp.component.html
@@ -1,12 +1,12 @@
-<div *ngIf="TDInfo" class="p-2 pl-5 pr-5 content">
+<div *ngIf="TPInfo" class="p-2 pl-5 pr-5 content">
     <div class="flex align-items-center border-round p-4 relative mb-6" style="background-color: rgb(255, 247, 234)">
         <div>
             <p class="text-900 font-medium">
-                Cohorte > {{ TDInfo.degree.name }} > BUT {{ TDInfo.promotion.level }} {{
-                TDInfo.degree.name }} {{ TDInfo.promotion.year }} > {{ TDInfo.training.name}} >
+                Cohorte > {{ TPInfo.degree.name }} > BUT {{ TPInfo.promotion.level }} {{
+                TPInfo.degree.name }} {{ TPInfo.promotion.year }} > {{ TPInfo.training.name}} > {{ TPInfo.td.name }} >
             </p>
             <h1 class="text-2xl font-semibold">
-                {{ TDInfo.name }}
+                {{ TPInfo.name }}
             </h1>
         </div>
         <div class="absolute hidden sm:hidden md:block" style="top: -14px; right: 50px">
@@ -19,56 +19,15 @@
             <ng-template pTemplate="header">
                 <div class="flex gap-2 align-items-center">
                     <div>
-                        <span>TPs</span>
-                    </div>
-                    <div>
-                        <span class="badge">{{ TDInfo.tps.length }}</span>
-                    </div>
-                </div>
-            </ng-template>
-
-            <p-table [value]="TDInfo.tps" [tableStyle]="{ 'min-width': '60rem' }" [paginator]="true" [rows]="5"
-                [showCurrentPageReport]="true"
-                currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} TPs"
-                [rowsPerPageOptions]="[5, 10, 20, 50]">
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th pSortableColumn="name">
-                            Nom<p-sortIcon field="name"></p-sortIcon>
-                        </th>
-                        <th pSortableColumn="student_count">
-                            Étudiants inscrits <p-sortIcon field="student_count"></p-sortIcon>
-                        </th>
-                        <th></th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-training>
-                    <tr>
-                        <td>
-                            {{ training.name }}
-                        </td>
-                        <td>{{ training.student_count }}</td>
-                        <td>
-                            <p-button icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
-                                severity="secondary "></p-button>
-                        </td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </p-tabPanel>
-        <p-tabPanel>
-            <ng-template pTemplate="header">
-                <div class="flex gap-2 align-items-center">
-                    <div>
                         <span>Étudiants</span>
                     </div>
                     <div>
-                        <span class="badge">{{ TDInfo.students.length }}</span>
+                        <span class="badge">{{ TPInfo.students.length }}</span>
                     </div>
                 </div>
             </ng-template>
 
-            <p-table [value]="TDInfo.students" [tableStyle]="{ 'min-width': '60rem' }" [paginator]="true" [rows]="5"
+            <p-table [value]="TPInfo.students" [tableStyle]="{ 'min-width': '60rem' }" [paginator]="true" [rows]="5"
                 [showCurrentPageReport]="true"
                 currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} étudiants"
                 [rowsPerPageOptions]="[5, 10, 20, 50]">
@@ -80,9 +39,6 @@
                         <th pSortableColumn="lastname">
                             Prénom <p-sortIcon field="lastname"></p-sortIcon>
                         </th>
-                        <th pSortableColumn="tp">
-                            TP <p-sortIcon field="tp"></p-sortIcon>
-                        </th>
                         <th pSortableColumn="apprentice">
                             Apprenti <p-sortIcon field="apprentice"></p-sortIcon>
                         </th>
@@ -93,7 +49,6 @@
                     <tr>
                         <td>{{ student.first_name }}</td>
                         <td>{{ student.last_name }}</td>
-                        <td>{{ student.tp[0].name }}</td>
                         <td>
                             <i class="pi" [ngClass]="{
                   'pi-check-circle text-green-300': student.isApprentice,
